--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 		<div class = "estudios">
 			<i>Nuestros Estudios</i>
 		</div>
-		<div class = "Contactanos">
+		<a href="#pie"><div class = "Contactanos">
 			<i>Contactanos</i>
-		</div>
+		</div></a>
 		<br />
 		<br />
 		<br />
