Changes in buttons, and corrections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 	</header>
 	<p id = "banner" target = "_blank" rel = "nofollow">
-	<a href = "intent://send/+573195696788#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" target="_blank" rel="nofollow">
+	<a href = "intent://send/3195696788#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" target="_blank" rel="nofollow">
 	<img src="whatsappicon.png" style="width:80px;" target="_blank" rel="nofollow"></a><br target="_blank" rel="nofollow">	
 	<a href="http://fb.com/WilliiamFabian" target="_blank" rel="nofollow">
 	<img src="facebookicon.png" style="width:80px;" target="_blank" rel="nofollow"></a><br target="_blank" rel="nofollow">	
@@ -21,7 +21,7 @@
 	<img src="mailicon.png" style="width:80px;" target="_blank" rel="nofollow"></a><br target="_blank" rel="nofollow">	
 	<a href="https://twitter.com/Unthinkable_Man" target="_blank" rel="nofollow">
 	<img src="twittericon.png" style="width:80px;" target="_blank" rel="nofollow"></a><br target="_blank" rel="nofollow">
-	<a href="tel://3195696788" target="_blank" rel="nofollow">
+	<a href="tel:3195696788" target="_blank" rel="nofollow">
 	<img src="telicon.png" style="width:80px;" target="_blank" rel="nofollow"></a><br target="_blank" rel="nofollow">		
 	</p>
 	<div id = "lema">
@@ -84,21 +84,31 @@
 		<div id="div5">
 			<b>Contactanos:</b>
 		</div>
-		  	<div class = "pie1">
-		  		<a href="intent://send/+573195696788#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" style="text-decoration:none; color:whitesmoke;"><img src="whatsappicon.png">Envíanos un mensaje de WhatsApp</a>
-		  	</div>
-		  	<div class = "pie2">
-		  		<a href="https://m.me/WilliiamFabian" style="text-decoration:none; color:whitesmoke;"><img src="messengericon.png">Envíanos un mensaje de Facebook</a>
-		  	</div>
-		  	<div class ="pie3">
-		  		<a href="mailto:thewillfap@gmail.com" style="text-decoration:none; color:whitesmoke;"><img src="mailicon.png">Envíanos un mensaje al correo  </a>
-		  	</div>
-		  	<div class ="pie4" >
-		  		<a href="https://twitter.com/Unthinkable_Man" style="text-decoration:none; color:whitesmoke;"><img src="twittericon.png">@Untinkable-man</a>
-		  	</div>
-		  	<div class ="pie5">
-		  		<a href="tel://3195696788" style="text-decoration:none; color:whitesmoke;"><img src="telicon.png">+57 319 569 6788</a>
-		  	</div>
+		  	<a href="intent://send/3195696788#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" style="text-decoration:none; color:whitesmoke;">
+		  		<div class = "pie1">
+		  			<img src="whatsappicon.png">Envíanos un mensaje de WhatsApp
+		  		</div>
+		  	</a>
+		  	<a href="https://m.me/WilliiamFabian" style="text-decoration:none; color:whitesmoke;">
+		  		<div class = "pie2">
+		  			<img src="messengericon.png">Envíanos un mensaje de Facebook
+		  		</div>
+		  	</a>
+		  	<a href="mailto:thewillfap@gmail.com" style="text-decoration:none; color:whitesmoke;">
+		  		<div class ="pie3">
+		  			<img src="mailicon.png">Envíanos un mensaje al correo  
+		  		</div>
+		  	</a>
+		  	<a href="https://twitter.com/Unthinkable_Man" style="text-decoration:none; color:whitesmoke;">
+		  		<div class ="pie4" >
+		  			<img src="twittericon.png">@Untinkable-man
+		  		</div>
+		  	</a>
+		  	<a href="tel:3195696788" style="text-decoration:none; color:whitesmoke;">
+		  		<div class ="pie5">
+		  			<img src="telicon.png">+57 319 569 6788
+		  		</div>
+		  	</a>
 		  	<div class = "pie6">
 		  		<b>&hearts;Estamos comprometidos con tu crecimiento en el sector del modelaje.&hearts;</b>
 		  	</div>
