Changes and Subpages

--- a/post1.html
+++ b/post1.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title> Amoar Estudio</title>
+	<title> Amoar Studio</title>
 	<meta name = "description" content = "Amoar Studio es para ti " />
-	<link rel="stylesheet" type="text/css" href="./Css/stylesheets.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="./Css/p1stylesheets.css" media="screen" />
 </head>
 <body>
 	<header>
@@ -57,18 +57,18 @@
 	<br />
 	<br />
 	<div id="main"> 
-			<a href="post1.html" style="text-decoration:none; color:whitesmoke;">
-				<div class="column1">
-					<div id= "titulo">Estudio Techo</div>
-					<div id = "imagen1">
-						<img src="writer.jpeg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 10pt;"/>
-					</div>
-					Siempre cerca tuyo.
-				</div>
-			</a>
-			<div class="column2">Contenido de la segunda columna</div>
-			<div class="column3">Contenido de la tercera columna</div> 
-	</div>
+			<div id="titulo">Estudio Techo</div>
+			<br />
+			<div class="columna1">
+				<img src="writer.jpeg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
+			</div>
+			<div class = "columna2">
+				Siempre cerca tuyo.
+				Te ayudamos en todo para que comiences en el mundo del modelaje WebCam, y te proporcionamos todos los elementos que requieres para probarte en este mundo tan gratificante.
+			</div>
+			<div class = "columna3">
+				Si sientes que eres afin con el empleo, que cuentas con las aptitudes indicadas, o por otro lado no, pero tienes la iniciativa de aprender, te esperamos con las puertas abiertas siempre.
+			</div>
 	</div>
 	<br />
 	<br />
