3rd Post  and more fixes

--- a/index.html
+++ b/index.html
@@ -66,8 +66,29 @@
 					Siempre cerca tuyo.
 				</div>
 			</a>
-			<div class="column2">Contenido de la segunda columna</div>
-			<div class="column3">Contenido de la tercera columna</div> 
+			<a href="post2.html" style="text-decoration:none; color:whitesmoke;">
+				<div class="column2">
+					<div id = "titulo2">
+						Modelaje WebCam
+					</div>
+					<div id = "imagen2">
+						<img src="room.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 10pt;"/>
+					</div>
+					¡Es lo tuyo!
+				</div>
+			</a>
+			<a href="post3.html" style="text-decoration:none; color:whitesmoke;">
+				<div class="column3">
+					<div id ="titulo3">
+						Estudio Galerias
+					</div>
+					<div id = "imagen3">
+						<img src="escritora.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 10pt;"/>
+					</div>
+					¡Tienes opciones!
+
+				</div>
+			</a> 
 	</div>
 	</div>
 	<br />
