More little Fixes
Change th first post

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<div id="main"> 
 			<a href="post1.html" style="text-decoration:none; color:whitesmoke;">
 				<div class="column1">
-					<div id= "titulo">Estudio Techo</div>
+					<div id= "titulo">Estudio Amoar</div>
 					<div id = "imagen1">
 						<img src="writer.jpeg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 10pt;"/>
 					</div>
