Little changes, again in the first post

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				<div class="column1">
 					<div id= "titulo">Estudio Amoar</div>
 					<div id = "imagen1">
-						<img src="writer.jpeg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 10pt;"/>
+						<img src="Amoar.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 10pt;"/>
 					</div>
 					Siempre cerca tuyo.
 				</div>
