--- a/post1.html
+++ b/post1.html
@@ -57,10 +57,10 @@
 	<br />
 	<br />
 	<div id="main"> 
-			<div id="titulo">Estudio Techo</div>
+			<div id="titulo">Estudio Amoar</div>
 			<br />
 			<div class="columna1">
-				<img src="writer.jpeg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
+				<img src="Amoar.jpeg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
 			</div>
 			<div class = "columna2">
 				Siempre cerca tuyo.
