--- a/post1.html
+++ b/post1.html
@@ -60,7 +60,7 @@
 			<div id="titulo">Estudio Amoar</div>
 			<br />
 			<div class="columna1">
-				<img src="Amoar.jpeg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
+				<img src="Amoar.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
 			</div>
 			<div class = "columna2">
 				Siempre cerca tuyo.
