A lot of changes

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 			<a href="http://fb.com" style="text-decoration:none; color:whitesmoke;"><b><i>Modelo Webcam</i></b>
 			</a>
 		</div>
-		<div class = "quienes">
-			<i>¿Quienes Somos?</i>
-		</div>
+		<a href="quienes_somos.html" style="text-decoration:none; color:whitesmoke;" >
+			<div class = "quienes">
+				<i>¿Quienes Somos?</i>
+			</div>
+		</a>
 		<div class = "vision">
 			<i>Nuestra Vision</i>
 		</div>
