--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title> Amoar Studio</title>
+	<title> Amoar Estudio</title>
 	<meta name = "description" content = "Amoar Studio es para ti " />
-	<link rel="stylesheet" type="text/css" href="./Css/p1stylesheets.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="./Css/quienes_somos.css" media="screen" />
 </head>
 <body>
 	<header>
@@ -52,26 +52,63 @@
 		El <b style="color:red;"><i>Estudio Amoar</i></b> esta encantado en recibirte.
 		</p>
 	</div>
+
+	<div id = "somos">
+		<div id = "somostitulo">
+			<b>¿Quienes Somos?</b>
+		</div>
+		<div class = "somoscolumna1">
+			<img src="Amoar.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
+		</div>
+		<div class = "somoscolumna2">
+			Somos una cadena de estudios con mas de 3 años de experiencia, contamos con dos sedes en Bogota y satelites en varias ciudades y Venezuela. Somos un un estudio serio, cumplimos todas las normas para proteger tu identidad.
+		</div>
+		<div class = "somoscolumna3">
+			Contamos con la capacidad de ayudar mujeres emprendedoras, deshinibidas, que quieran entrar al mundo del modela WebCam. Nuestros principios fundamentales son el respeto, la sana convivencia, la honestidad, el aseo y la salud.
+		</div>
 	</div>
+	</div>
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
+	<br />
 	<br />
 	<br />
 	<br />
 	<br />
 	<br />
 	<div id="main"> 
-			<div id="titulo">Estudio Amoar</div>
-			<br />
-			<div class="columna1">
-				<img src="Amoar.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
-			</div>
-			<div class = "columna2">
-				Siempre cerca tuyo.
-				Te ayudamos en todo para que comiences en el mundo del modelaje WebCam, y te proporcionamos todos los elementos que requieres para probarte en este mundo tan gratificante.
-			</div>
-			<div class = "columna3">
-				Si sientes que eres afin con el empleo, que cuentas con las aptitudes indicadas, o por otro lado no, pero tienes la iniciativa de aprender, te esperamos con las puertas abiertas siempre.
-			</div>
+			<a href="post1.html" style="text-decoration:none; color:whitesmoke;">
+				<div class="column1">
+					<div id= "titulo">
+						Estudio Amoar
+					</div>
+				</div>
+			</a>
+			<a href="post2.html" style="text-decoration:none; color:whitesmoke;">
+				<div class="column2">
+					<div id = "titulo2">
+						Modelaje WebCam
+					</div>
+				</div>
+			</a>
+			<a href="post3.html" style="text-decoration:none; color:whitesmoke;">
+				<div class="column3">
+					<div id ="titulo3">
+						Estudio Galerias
+					</div>
+				</div>
+			</a> 
 	</div>
+	</div>
+	<br />
 	<br />
 	<br />
 	<br />
@@ -123,7 +160,7 @@
 	</footer>
 	<hr />
 	<div id = "final">
-	&copy;Amoar Estudios 2015 - 2017
+	&copy;Amoar Estudios 2014 - 2017
 	<br />       
 	Design By: ThewillFap        
 	thewillfap@gmail.com
