More changes again

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -61,10 +61,10 @@
 			<img src="Amoar.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 15pt;"/>
 		</div>
 		<div class = "somoscolumna2">
-			Somos una cadena de estudios con mas de 3 años de experiencia, contamos con dos sedes en Bogota y satelites en varias ciudades y Venezuela. Somos un un estudio serio, cumplimos todas las normas para proteger tu identidad.
+			Somos una cadena de estudios con mas de 3 años de experiencia, contamos con dos sedes en Bogota y satelites en varias ciudades y Venezuela. Somos un estudio serio, cumplimos todas las normas para proteger tu identidad.
 		</div>
 		<div class = "somoscolumna3">
-			Contamos con la capacidad de ayudar mujeres emprendedoras, deshinibidas, que quieran entrar al mundo del modela WebCam. Nuestros principios fundamentales son el respeto, la sana convivencia, la honestidad, el aseo y la salud.
+			Contamos con la capacidad de ayudar mujeres emprendedoras que quieran manejar su tiempo y definir sus propios ingresos, que quieran entrar al mundo del modela WebCam. Nuestros principios fundamentales son el respeto, la sana convivencia, la honestidad, el aseo y la salud.
 		</div>
 	</div>
 	</div>
