Change color of principal page

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div id = "imagen3">
 						<img src="escritora.jpg" alt="Imagen del logotipo" style="max-width: 100%; border-radius: 10pt;"/>
 					</div>
-					¡Tienes opciones!
+					¡Tienes Oportunidades!
 
 				</div>
 			</a> 
