opcion 2 de numero

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		</div>
 	</header>
 	<p id = "banner" target = "_blank" rel = "nofollow">
-	<a href = "intent://send/+573195696788#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" target="_blank" rel="nofollow">
+	<a href = "intent://send/573195696788#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end" target="_blank" rel="nofollow">
 	<img src="whatsappicon.png" style="width:80px;" target="_blank" rel="nofollow"></a><br target="_blank" rel="nofollow">	
 	<a href="http://fb.com/WilliiamFabian" target="_blank" rel="nofollow">
 	<img src="facebookicon.png" style="width:80px;" target="_blank" rel="nofollow"></a><br target="_blank" rel="nofollow">	
