--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div></a>
 		<br />
 		<p id = "bienvenida">
-		El <b style="color:red;"><i>Estudio Amoar</i></b> esta encantado en recibirte.
+		El <b ><i>Estudio Amoar</i></b> esta encantado en recibirte.
 		</p>
 	</div>
 	</div>
@@ -91,7 +91,6 @@
 
 				</div>
 			</a> 
-	</div>
 	</div>
 	<br />
 	<br />
